# trs-core

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  main.py  promts.py
src/api/: __init__.py  archive.py  base_client.py  utils.py
src/api/ai/: client.py
src/api/transcription/: __init__.py  client.py  schemas.py
src/database/: config.py  soft_delete_mixin.py
src/flow_processing/: service.py  utils.py
src/log/: __init__.py  config.py
src/mq/: __init__.py  rabbitmq.py
src/source_processing/: service.py  utils.py
src/sources/: __init__.py  dependencies.py  models.py  repositories.py  schemas.py  services.py
