[project]
name = "trs-core"
version = "0.0.1"
description = "TRS is a service for finding news stories from streams, storing and analyzing them. TRS-core is the main service that identifies news stories from the stream, makes a short summary using AI, and notifies about new stories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "faststream>=0.5.48",
    "ollama>=0.5.3",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
